# 167

HW2/: Camera.cpp
RayTracer-setup/: CMakeLists.txt  main.cpp
RayTracer-setup/include/: Camera.h  GeomSphere.h  GeomTriangle.h  GeometryBase.h  GlossyMaterial.h  Image.h  ModelBase.h  RayTracer.h  Scene.h
RayTracer-setup/src/: RayTracer.cpp  Scene.cpp
RayTracer-setup/src/geometries/: GeomSphere.cpp  GeomTriangle.cpp
RayTracer-setup/src/materials/: GlossyMaterial.cpp
RayTracer-setup/src/models/: Square.cpp
RayTracer-setup/src/scenes/: sphere_in_box.inl  teapot_in_box.inl
src/: Camera.cpp
